@@ -1,3 +1,13 @@
+2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
+
+	* include/libz.h, scheduler/scheduler.c, scheduler/update.c,
+	  lib/esyslib.c, include/ta.h:
+	    To track strange looking  eunlink()  problem reported by
+	    Eugene my first approach is to add identity tags for eunlink()
+	    calls so I can have some additional clue as to *which* of
+	    four possible places the problems are occurring at.
+	    (Fift place is impossible, fortunately.)
+
 2000-08-02  Eugene Crosser <crosser@online.ru>
 
 	* transports/smtp/getmxrr.c:
